style: scroll fix. z-index fix. Small fixes

--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -14,7 +14,7 @@ a {
 }
 
 .wrapper {
-  overflow: hidden;
+  overflow: auto;
   display: flex;
   flex-direction: column;
   min-height: 100%;
@@ -96,10 +96,14 @@ a {
 .section{
   display: flex;
   justify-content: space-around;
-  height: 100%;
   margin: 4rem auto 0;
   padding: 0 1rem;
   gap: 1.5rem;
+
+  @media screen and (max-width: $md) {
+    flex-wrap: wrap;
+    padding: 0;
+  }
 }
 
 .section-main{
@@ -112,6 +116,9 @@ a {
   width: 30%;
   height: fit-content;
   background-color: white;
+  @media screen and (max-width: $md) {
+    width: 100%;
+  }
 }
 
 .main-section {
@@ -131,5 +138,6 @@ a {
 .tasks-wrapper{
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   gap: 2rem;
 }
